# pillar_based_removal

./: .gitignore  .gitmodules  1  README.MD
scripts/: get_kitti_raw_one_frame.sh
src/pillar_based_removal/: CMakeLists.txt  package.xml
src/pillar_based_removal/include/pillar_based_removal/: kernel.h  pillar_based_removal.h  point_cloud_type.h
src/pillar_based_removal/launch/: launch.py
src/pillar_based_removal/params/: param.yaml
src/pillar_based_removal/src/: pillar_based_removal_algo.cpp  pillar_based_removal_algo.cu  pillar_based_removal_node.cpp
src/pillar_based_removal_py/: package.xml  setup.cfg  setup.py
src/pillar_based_removal_py/launch/: launch.py
src/pillar_based_removal_py/pillar_based_removal_py/: pillar_based_removal_algo.py  pillar_based_removal_node.py
